--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,18 +1,22 @@
 [package]
-name = "double-zero-raiser"
+name = "alchem"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspaces]
+[workspace]
 members = [
+    "crates/bors",
     "crates/todos",
     "crates/utils",
-    "crates/websocket"
+    "crates/websocket",
 ]
 
 [dependencies]
-axum = "0.4"
+alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
+
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2"]}
+axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
 tokio = "1"
 tower = { version = "0.4", features = ["util"] }
