--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -6,3 +6,24 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+axum = "0.5"
+tokio = { version = "1", features = ["full"] }
+tower = { version = "0.4", features = ["util"] }
+tracing = "0.1"
+tracing-subscriber = { version="0.3", features = ["env-filter"] }
+anyhow = "1"
+chrono = { version = "0.4", features = ["serde"] }
+comrak = { version = "0.12", default-features = false }
+diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+encoding = "0.2"
+jwt-simple = "0.10"
+futures = "0.3"
+itertools = "0.10"
+lettre = "0.10.0-rc.4"
+once_cell = "1"
+openssl = "0.10"
+percent-encoding = "2"
+rand = "0.8"
+regex = "1"
+serde = { version = "1", features = ["derive"] }
+thiserror = "1"
