--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "double-zero-raiser-websocket"
+name = "alchem-websocket"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = { version = "0.4", features = ["ws"] }
+axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
+redis = {version = "0.21", features = ["cluster","tokio-comp"]}
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
