--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ members = [
 ]
 
 [dependencies]
+alchem-utils = { version = "0.1.0",path = "./crates/utils"}
 alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
 
 diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2"]}
