--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "double-zero-raiser-utils"
+name = "alchem-utils"
 version = "0.1.0"
 edition = "2021"
 
@@ -24,6 +24,10 @@ once_cell = "1"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
+redis = {version = "0.21", features = ["cluster","tokio-comp"]}
 regex = "1"
 serde = { version = "1", features = ["derive"] }
+smart-default = "0.6"
+strum = { version = "0.24", features = ["derive"] }
 thiserror = "1"
+validator = { version = "0.14.0", features = ["derive"] }
