--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -15,19 +15,17 @@ anyhow = "1"
 chrono = { version = "0.4", features = ["serde"] }
 comrak = { version = "0.12", default-features = false }
 diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+dotenv="0.15"
 encoding = "0.2"
+envy = "0.4"
 jwt-simple = "0.10"
 futures = "0.3"
-itertools = "0.10"
 lettre = "0.10.0-rc.4"
-once_cell = "1"
+lazy_static = "1"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
 redis = {version = "0.21", features = ["cluster","tokio-comp"]}
-regex = "1"
 serde = { version = "1", features = ["derive"] }
-smart-default = "0.6"
-strum = { version = "0.24", features = ["derive"] }
 thiserror = "1"
 validator = { version = "0.14.0", features = ["derive"] }
