make server startable

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ members = [
 ]
 
 [dependencies]
+
+alchem-schema = { version = "0.1.0",path = "./crates/schema"}
 alchem-utils = { version = "0.1.0",path = "./crates/utils"}
 alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
 
@@ -21,7 +23,9 @@ diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "po
 axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
 jwt-simple = "0.10"
+serde = { version = "1", features = ["derive"] }
 tokio = "1"
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
+validator = { version = "0.14.0", features = ["derive"] }
