--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -7,10 +7,7 @@ edition = "2021"
 
 [dependencies]
 axum = "0.5"
-tokio = { version = "1", features = ["full"] }
-tower = { version = "0.4", features = ["util"] }
-tracing = "0.1"
-tracing-subscriber = { version="0.3", features = ["env-filter"] }
+http-body = "0.4.3"
 chrono = { version = "0.4", features = ["serde"] }
 data-encoding = "2"
 diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
@@ -27,4 +24,8 @@ redis = {version = "0.21", features = ["cluster","tokio-comp"]}
 ring = "0.17.0-alpha.11"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
+tokio = { version = "1", features = ["full"] }
+tower = { version = "0.4", features = ["util"] }
+tracing = "0.1"
+tracing-subscriber = { version="0.3", features = ["env-filter"] }
 validator = { version = "0.14.0", features = ["derive"] }
