--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ DATABASE_URL = postgres://allen:zhang@localhost/alchem
 REDIS_URLS = redis://127.0.0.1:6379
 SERVER = 127.0.0.1:3000
 JWT_RSA = keys/private.pem
-JWT_EXPIRATION = 3600
+JWT_EXPIRE_SECONDS = 300
