--- a/crates/schema/Cargo.toml
+++ b/crates/schema/Cargo.toml
@@ -8,7 +8,9 @@ edition = "2021"
 [dependencies]
 alchem-utils = { version = "0.1", path = "../utils" }
 chrono = { version = "0.4", features = ["serde"] }
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+diesel = {git = "https://github.com/diesel-rs/diesel", rev = "d8bb571", default-features = false, features = ["chrono", "postgres", "serde_json"]}
+diesel-async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["postgres"]}
+futures = "0.3"
 serde = { version = "1", features = ["derive"] }
 # tokio = { version = "1", features = ["full"] }
 # tracing = "0.1"
