--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -6,21 +6,22 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.5"
+axum = { version = "0.5", features = ["ws", "headers"] }
 http-body = "0.4.3"
 chrono = { version = "0.4", features = ["serde"] }
 data-encoding = "2"
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2", "serde_json"]}
+diesel = {git = "https://github.com/diesel-rs/diesel", rev = "d8bb571", default-features = false, features = ["chrono", "postgres", "serde_json"]}
+diesel-async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["postgres"]}
 dotenvy="0.15"
 envy = "0.4"
 jwt-simple = "0.10"
 futures = "0.3"
-lettre = "0.10.0-rc.4"
 lazy_static = "1"
+lettre = "0.10.0-rc.4"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
-redis = {version = "0.21", features = ["cluster","tokio-comp"]}
+
 ring = "0.17.0-alpha.11"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
