add phone validate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,7 @@ members = [
 alchem-schema = { version = "0.1.0",path = "./crates/schema"}
 alchem-utils = { version = "0.1.0",path = "./crates/utils"}
 alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
-
-diesel = {git = "https://github.com/diesel-rs/diesel", features = ["chrono", "postgres","r2d2"]}
+diesel = {git = "https://github.com/diesel-rs/diesel", rev = "d8bb571", default-features = false, features = ["chrono", "postgres", "serde_json"]}
 axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
 jwt-simple = "0.10"
@@ -28,4 +27,4 @@ tokio = "1"
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
-validator = { version = "0.14.0", features = ["derive"] }
+validator = { version = "0.14.0", features = ["derive","phone"] }
