--- a/crates/websocket/Cargo.toml
+++ b/crates/websocket/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+
+alchem-utils = { version = "0.1.0",path = "../utils"}
+
 axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
 redis = {version = "0.21", features = ["cluster","tokio-comp"]}
