--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgres://allen:zhang@localhost/alchem
-REDIS_URL=redis://127.0.0.1:6379
+REDIS_CLUSTER_NODES=redis://127.0.0.1:6379
 SERVER=127.0.0.1:3000
 JWT_RSA=keys/private.pem
 JWT_EXPIRE_SECONDS=300
