--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -21,7 +21,7 @@ lettre = "0.10.0-rc.4"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
-
+redis = { version = "0.21", features = ["cluster"] }
 ring = "0.17.0-alpha.11"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
