--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,20 +9,21 @@ members = [
     # "crates/bors",
     "crates/todos",
     "crates/schema",
-    "crates/utils"
+    "crates/utils",
+    "crates/websocket"
 ]
 
 [dependencies]
 
 alchem-schema = { version = "0.1.0",path = "./crates/schema"}
 alchem-utils = { version = "0.1.0",path = "./crates/utils"}
+alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
 diesel = {git = "https://github.com/weiznich/diesel", rev = "9b4179e01ee96bd585cf306f64359971ee9ece44", default-features = false, features = ["chrono", "postgres", "serde_json"]}
 axum = { version = "0.5", features = ["ws", "headers"] }
 futures = "0.3"
 jwt-simple = "0.10"
-redis = { version = "0.21", features = ["cluster"] }
 serde = { version = "1", features = ["derive"] }
-tokio = "1"
+tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
