--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -10,11 +10,11 @@ axum = { version = "0.5", features = ["ws", "headers"] }
 http-body = "0.4.3"
 chrono = { version = "0.4", features = ["serde"] }
 data-encoding = "2"
-diesel = {git = "https://github.com/weiznich/diesel", rev = "9b4179e01ee96bd585cf306f64359971ee9ece44", default-features = false, features = ["chrono", "postgres", "serde_json"]}
+diesel = {git = "https://github.com/diesel-rs/diesel", rev = "9bc6d501cea865cb239e68012eb7deeb85304514", default-features = false, features = ["chrono", "postgres", "serde_json"]}
 diesel-async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["postgres"]}
 dotenvy="0.15"
 envy = "0.4"
-jwt-simple = "0.10"
+jwt-simple = "0.11"
 futures = "0.3"
 lazy_static = "1"
 lettre = "0.10.0-rc.4"
