--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,5 +28,9 @@ tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
-validator = { version = "0.14.0", features = ["derive","phone"] }
+validator = { version = "0.15.0", features = ["derive","phone"] }
 
+[dev-dependencies]
+reqwest = { version = "0.11.10", features = ["json"] }
+serde_json = "1"
+tokio-tungstenite = "0.17.1"
