--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,13 @@
 version: "3.9"
+
+networks:
+  redis-cluster-network:
+    name: redis-cluster-network
+    driver: bridge
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.20.0.0/24
 services:
   db:
     image: postgres:alpine
@@ -12,14 +21,91 @@ services:
     volumes:
       - database_data:/var/lib/postgres/data
     restart: always
-  redis:
+
+  redis-cluster:
     image: redis:alpine
-    container_name: redis
+    command: redis-cli --cluster create 172.20.0.31:6373 172.20.0.32:6374 172.20.0.33:6375 172.20.0.34:6376 172.20.0.35:6377 172.20.0.36:6378 --cluster-replicas 1 --cluster-yes
     ports:
-      - "6379:6379"
+      - '6379:6379'
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.30
+    depends_on:
+      - redis-node-1
+      - redis-node-2
+      - redis-node-3
+      - redis-node-4
+      - redis-node-5
+      - redis-node-6
+
+  redis-node-1:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6373:6373'
     volumes:
-      - redis_data:/var/lib/redis/data
-    restart: always
+      - redis-node-1-data:/var/lib/redis
+      - ./docker/redis-node-1.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.31
+  redis-node-2:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6374:6374'
+    volumes:
+      - redis-node-2-data:/var/lib/redis
+      - ./docker/redis-node-2.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.32
+  redis-node-3:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6375:6375'
+    volumes:
+      - redis-node-3-data:/var/lib/redis
+      - ./docker/redis-node-3.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.33
+
+  redis-node-4:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6376:6376'
+    volumes:
+      - redis-node-4-data:/var/lib/redis
+      - ./docker/redis-node-4.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.34
+
+  redis-node-5:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6377:6377'
+    volumes:
+      - redis-node-5-data:/var/lib/redis
+      - ./docker/redis-node-5.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.35
+  redis-node-6:
+    image: redis:alpine
+    command: redis-server /usr/local/etc/redis/redis.conf
+    ports:
+      - '6378:6378'
+    volumes:
+      - redis-node-6-data:/var/lib/redis
+      - ./docker/redis-node-6.conf:/usr/local/etc/redis/redis.conf
+    networks:
+      redis-cluster-network:
+        ipv4_address: 172.20.0.36
   # pulsar:
   #   image: apachepulsar/pulsar
   #   container_name: pulsar
@@ -36,5 +122,16 @@ services:
 volumes:
   database_data:
     driver: local
-  redis_data:
+
+  redis-node-1-data:
+    driver: local
+  redis-node-2-data:
+    driver: local
+  redis-node-3-data:
+    driver: local
+  redis-node-4-data:
+    driver: local
+  redis-node-5-data:
+    driver: local
+  redis-node-6-data:
     driver: local
