--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 DATABASE_URL=postgres://allen:zhang@localhost/alchem
-REDIS_CLUSTER_URL=redis://127.0.0.1:6373,redis://127.0.0.1:6374,redis://127.0.0.1:6375,redis://127.0.0.1:6376,redis://127.0.0.1:6377,redis://127.0.0.1:6378
+REDIS_URL=redis://127.0.0.1:6379
 SERVER=127.0.0.1:3000
 JWT_RSA=keys/private.pem
 JWT_EXPIRE_SECONDS=300
