--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,17 +1,8 @@
 version: "3.9"
-
-networks:
-  redis-cluster-network:
-    name: redis-cluster-network
-    driver: bridge
-    ipam:
-      driver: default
-      config:
-        - subnet: 172.20.0.0/24
 services:
   db:
     image: postgres:alpine
-    container_name: alchem
+    container_name: postgres
     environment:
       - POSTGRES_USER=allen
       - POSTGRES_PASSWORD=zhang
@@ -22,116 +13,16 @@ services:
       - database_data:/var/lib/postgres/data
     restart: always
 
-  redis-cluster:
+  redis:
     image: redis:alpine
-    command: redis-cli --cluster create 172.20.0.31:6373 172.20.0.32:6374 172.20.0.33:6375 172.20.0.34:6376 172.20.0.35:6377 172.20.0.36:6378 --cluster-replicas 1 --cluster-yes
+    container_name: redis
     ports:
       - '6379:6379'
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.30
-    depends_on:
-      - redis-node-1
-      - redis-node-2
-      - redis-node-3
-      - redis-node-4
-      - redis-node-5
-      - redis-node-6
-
-  redis-node-1:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6373:6373'
     volumes:
-      - redis-node-1-data:/var/lib/redis
-      - ./docker/redis-node-1.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.31
-  redis-node-2:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6374:6374'
-    volumes:
-      - redis-node-2-data:/var/lib/redis
-      - ./docker/redis-node-2.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.32
-  redis-node-3:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6375:6375'
-    volumes:
-      - redis-node-3-data:/var/lib/redis
-      - ./docker/redis-node-3.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.33
-
-  redis-node-4:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6376:6376'
-    volumes:
-      - redis-node-4-data:/var/lib/redis
-      - ./docker/redis-node-4.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.34
-
-  redis-node-5:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6377:6377'
-    volumes:
-      - redis-node-5-data:/var/lib/redis
-      - ./docker/redis-node-5.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.35
-  redis-node-6:
-    image: redis:alpine
-    command: redis-server /usr/local/etc/redis/redis.conf
-    ports:
-      - '6378:6378'
-    volumes:
-      - redis-node-6-data:/var/lib/redis
-      - ./docker/redis-node-6.conf:/usr/local/etc/redis/redis.conf
-    networks:
-      redis-cluster-network:
-        ipv4_address: 172.20.0.36
-  # pulsar:
-  #   image: apachepulsar/pulsar
-  #   container_name: pulsar
-  #   ports:
-  #     - 8080:8080
-  #     - 6650:6650
-  #   environment:
-  #     PULSAR_MEM: " -Xms512m -Xmx512m -XX:MaxDirectMemorySize=1g"
-  #     DB_URL: db:5432
-  #   command: bin/pulsar standalone
-  #   restart: always
-  # 后面要补上 flutter前端
-  # application:
+      - redis_data:/var/lib/redis/data
+    restart: always
 volumes:
   database_data:
     driver: local
-
-  redis-node-1-data:
-    driver: local
-  redis-node-2-data:
-    driver: local
-  redis-node-3-data:
-    driver: local
-  redis-node-4-data:
-    driver: local
-  redis-node-5-data:
-    driver: local
-  redis-node-6-data:
+  redis_data:
     driver: local
