--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,11 +26,9 @@ jwt-simple = "0.11"
 serde = { version = "1", features = ["derive"] }
 tokio = { version = "1", features = ["full"] }
 tower = { version = "0.4", features = ["util"] }
+tower-http = { version = "0.3.3", features = ["fs", "trace"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
+
 validator = { version = "0.15.0", features = ["derive","phone"] }
 
-[dev-dependencies]
-reqwest = { version = "0.11.10", features = ["json"] }
-serde_json = "1"
-tokio-tungstenite = "0.17.1"
