--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,8 +18,8 @@ members = [
 alchem-schema = { version = "0.1.0",path = "./crates/schema"}
 alchem-utils = { version = "0.1.0",path = "./crates/utils"}
 alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
-diesel = {version = "2.0.0-rc.0",  default-features = false, features = ["chrono", "postgres", "serde_json"]}
-axum = { version = "0.5", features = ["ws", "headers"] }
+diesel = {version = "2.0.0-rc.0",  default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono", "postgres", "serde_json"]}
+axum = { version = "0.5.8", features = ["ws", "headers"] }
 futures = "0.3"
 jwt-simple = "0.11"
 
