--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -17,7 +17,7 @@ envy = "0.4"
 jwt-simple = "0.11"
 futures = "0.3"
 lazy_static = "1"
-lettre = "0.10.0-rc.7"
+lettre = "0.10.1"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
