--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ members = [
 alchem-schema = { version = "0.1.0",path = "./crates/schema"}
 alchem-utils = { version = "0.1.0",path = "./crates/utils"}
 alchem-websocket = { version = "0.1.0",path = "./crates/websocket"}
-diesel = {version = "2.0.0-rc.0",  default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono", "postgres", "serde_json"]}
+diesel = {version = "2",  default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono", "postgres", "serde_json"]}
 axum = { version = "0.5.8", features = ["ws", "headers"] }
 futures = "0.3"
 jwt-simple = "0.11"
@@ -30,5 +30,5 @@ tower-http = { version = "0.3.3", features = ["fs", "trace"] }
 tracing = "0.1"
 tracing-subscriber = { version="0.3", features = ["env-filter"] }
 
-validator = { version = "0.15.0", features = ["derive","phone"] }
+validator = { version = "0.16", features = ["derive","phone"] }
 
