--- a/crates/utils/Cargo.toml
+++ b/crates/utils/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "alchem-utils"
+name = "alw-utils"
 version = "0.1.0"
 edition = "2021"
 
@@ -10,8 +10,8 @@ axum = { version = "0.5", features = ["ws", "headers"] }
 http-body = "0.4.5"
 chrono = { version = "0.4", features = ["serde"] }
 data-encoding = "2"
-diesel = {version = "2",  default-features = false, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes", "chrono", "postgres", "serde_json"]}
-diesel-async = {git = "https://github.com/weiznich/diesel_async", default-features = false, features = ["postgres"]}
+diesel = {version = "2",  default-features = false, features = ["chrono", "postgres", "serde_json"]}
+diesel-async = {version = "0.1", default-features = false, features = ["postgres"]}
 dotenvy="0.15"
 envy = "0.4"
 jwt-simple = "0.11"
@@ -21,7 +21,7 @@ lettre = "0.10.1"
 openssl = "0.10"
 percent-encoding = "2"
 rand = "0.8"
-redis = "0.21" 
+redis = "0.22" 
 ring = "0.17.0-alpha.11"
 serde = { version = "1", features = ["derive"] }
 thiserror = "1"
