--- a/crates/schema/Cargo.toml
+++ b/crates/schema/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-alchem-utils = { version = "0.1", path = "../utils" }
+alw-utils = { version = "0.1", path = "../utils" }
 chrono = { version = "0.4", features = ["serde"] }
 diesel = {version = "2",  default-features = false, features = ["chrono", "postgres", "serde_json"]}
 diesel-async = {version = "0.1", default-features = false, features = ["postgres"]}
